[package]
name = "tradingview_client"
version = "0.1.0"
edition = "2021"

[dependencies]
# async
futures-lite = { version =  "2.3.0" }
async-io = "2.3.4"
async-lock = "3.4.0"
async-trait = "0.1.83"
async-executor = "1.13.1"
# async macros
smol-macros = "0.1.1"
macro_rules_attribute = "0.2.0"
# logging
log = "0.4.20"
# protocol codec
bytes = "1.7.2"
nom = "7.1.3"
# websocket
websocket_client = { git = "https://github.com/brandonros/websocket_client.git" }
# http
http = "1.0.0"
http_client = { git = "https://github.com/brandonros/http_client.git" }
# json
miniserde = "0.1.40"
# errors
simple_error = { git = "https://github.com/brandonros/simple_error.git" }
# common
tradingview_common = { path = "../tradingview_common" }
# stack trace
backtrace = "0.3.74"

[dev-dependencies]
# logging
env_logger = "0.11.5"
# env
dotenvy = "0.15.7"
