[package]
name = "tradingview_client"
version = "0.1.0"
edition = "2021"

[dependencies]
# async
futures-lite = { version =  "2.3.0" }
async-io = "2.3.4"
async-lock = "3.4.0"
async-trait = "0.1.83"
async-executor = "1.13.1"
# logging
log = "0.4.20"
# protocol codec
bytes = "1.7.2"
nom = "7.1.3"
# websocket
websocket_client = { git = "https://github.com/brandonros/websocket_client.git", rev = "7de0facf287a8ae78855892c2dbe804f407c37a1" }
# http
http = "1.0.0"
# json
miniserde = "0.1.40"
# errors
simple_error = { git = "https://github.com/brandonros/simple_error.git" }
# common
tradingview_common = { path = "../tradingview_common" }
# codec
tradingview_codec = { path = "../tradingview_codec" }
# stack trace
backtrace = "0.3.74"

[dev-dependencies]
# logging
env_logger = "0.11.5"
# env
dotenvy = "0.15.7"
# async runtime
smol_base = { git = "https://github.com/brandonros/smol_base.git", rev = "9ba2a61331bd1663560a7efb9e4a743aeb28959e" }
