[package]
name = "tradingview_http_client"
version = "0.1.0"
edition = "2021"

[dependencies]
# http
http = "1.0.0"
http_client = { git = "https://github.com/brandonros/http_client.git" }
# logging
log = "0.4.20"
env_logger = "0.11.5"
# async
async-executor = "1.13.0"
async-io = "2.3.4"
# async macros
smol-macros = "0.1.1"
macro_rules_attribute = "0.2.0"
# json
miniserde = "0.1.40"
# errors
simple_error = { git = "https://github.com/brandonros/simple_error.git" }
# tradingview
tradingview_common = { path = "../tradingview_common" }
# env vars
dotenvy = "0.15.7"
