[package]
name = "tradingview_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
# http
http = "1.0.0"
http_client = { git = "https://github.com/brandonros/http_client.git" }
# logging
log = "0.4.20"
env_logger = "0.11.5"
# async
futures-lite = "2.3.0"
async-executor = "1.13.0"
async-io = "2.3.4"
async-fs = "2.1.2"
# async macros
smol-macros = "0.1.1"
macro_rules_attribute = "0.2.0"
# json
miniserde = "0.1.40"
# errors
simple_error = { git = "https://github.com/brandonros/simple_error.git" }
# tradingview
tradingview_common = { path = "../tradingview_common" }
tradingview_client = { path = "../tradingview_client" }
# scraper
scraper = { git = "https://github.com/brandonros/scraper.git" }
# env vars
dotenvy = "0.15.7"
