[package]
name = "tradingview_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
# http
http = "1.0.0"
http_client = { git = "https://github.com/brandonros/http_client.git" }
# logging
log = "0.4.20"
env_logger = "0.11.5"
# async
futures-lite = "2.3.0"
async-executor = { git = "https://github.com/brandonros/async-executor.git", rev = "144d6c6bcd92ecba5ae1214df25f420d192d5248", features = ["main_executor"] }
async-io = "2.3.4"
async-fs = "2.1.2"
smol_base = { git = "https://github.com/brandonros/smol_base.git", rev = "f2425a63a2d8d10422cd0fa5a1bf7eaa953216dc" }
# json
miniserde = "0.1.40"
# errors
simple_error = { git = "https://github.com/brandonros/simple_error.git" }
# tradingview
tradingview_common = { path = "../tradingview_common" }
tradingview_client = { path = "../tradingview_client" }
# csv_scraper
csv_scraper = { git = "https://github.com/brandonros/csv_scraper.git", rev = "ce507695de7fe1cb264a518506dbc0df735a1717" }
# env vars
dotenvy = "0.15.7"
